<resources>
    <string name="app_name">NeighborFood</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_page">Profile</string>
    <string name="payment_details">Payment Details</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="food_preferences">Food Preferences</string>
    <string name="past_orders">Past Orders</string>
    <string name="account">Account</string>
    <string name="favorites">Favorites</string>
    <string name="privacy">Privacy</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="foulen">Foulen</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="addpicturebutton">addPictureButton</string>
    <string name="order">order</string>
    <string name="meal_picture" />
    <string name="add_picture_button" />
    <string name="propose_meal">Propose meal</string>
    <string name="server_client_id">743325402792-a1337fr4929vml06r8pkrtaasubvpusp.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="welcome_to_neighborfood">Welcome to NeighborFood</string>
    <string name="log_out">Log Out</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="subscribers">Subscribers</string>
    <string name="meals">meals</string>
    <string name="heart">heart</string>
    <string name="_50_reviews">50 reviews</string>
    <string name="_61">61</string>
    <string name="_103">103</string>
    <string name="mr_fish">Mr.Fish</string>
    <string name="_4_7">4.7</string>
    <string name="star">star</string>
    <string name="facebookicon">facebookIcon</string>
    <string name="subscribe">subscribe</string>
    <string name="notify_me">notify me</string>
    <string name="past_meals">Past meals</string>
    <string name="meal1">Meal1</string>
    <string name="sdp_fan">SDP fan</string>
    <string name="gordon_ramsey">Gordon Ramsey</string>
    <string name="_4_9">4.9</string>
    <string name="_5921">5921</string>
    <string name="_3100">3100</string>
    <string name="_50304_reviews">50304 reviews</string>
    <string name="email">E-mail</string>
    <string name="meal_description">meal_description</string>
    <string name="couscous">couscous</string>
    <string name="see_vendor_profile">See Vendor Profile</string>
    <string name="order_meal">Order Meal</string>
    <string name="add_link">Add link</string>
    <string name="external_link">External Link</string>
    <string name="links">Links</string>
    <string name="save_success">Successfully Saved!</string>
    <string name="save_failure"> Failed to saved :(</string>
    <string name="subscribe_success">Successfully subscribed to %1$s</string>
    <string name="unsubscribe_success">Successfully unsubscribed from %1$s</string>
    <string name="load_failure">Failed to load data :(</string>
    <string name="login_failure">Failed to login :(</string>
    <string name="welcome_message">Welcome, %1$s! We are glad that you joined us! \n Click on the button to setup your profile</string>
    <string name="welcome_back_message">Welcome back, %1$s! Fresh meals are right at the tip of your fingers, click start to see them!</string>
    <string name="finish_profile">Set up profile</string>
    <string name="connection_invitation">Please connect via your google account!</string>
    <string name="twitterLink">https://twitter.com/</string>
    <string name="InstagramLink">https://www.instagram.com/</string>
    <string name="FacebookLink">https://www.facebook.com/</string>
    <string name="channel_name">NeighborFood</string>
    <string name="channel_description">notifications for the app</string>
    <string name="channel_id">ch1</string>
    <string name="assigned">assigned</string>
    <string name="todo">TODO</string>
    <string name="image_load_error">Failed to load selected image :(</string>
    <string name="confirm_delivery">confirm Delivery</string>
    <string name="current_orders">Current Orders</string>
    <string name="orderstatus">orderStatus</string>
    <string name="meal_name">Meal Name</string>

    <string name="buyer_mode_title">Buyer</string>
    <string name="vendor_mode_title">Vendor</string>
    <string name="priceText">Price:</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="allergens">allergens :</string>
    <string name="vendor_profile">vendor Profile</string>
    <string name="unassigned_orders">Unassigned Orders</string>
    <string name="waiting_for_pickup">Waiting for pickup</string>
    <string name="delivered">Delivered</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="sortby">Sort By:</string>
    <string name="filter">filter</string>
    <string name="price_tag">%1$.2f chf</string>
    <string name="distance_tag">%1$s m</string>

</resources>
