<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountFragment"
    >

    <ScrollView
        android:id="@+id/accountScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AccountDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <Button
                android:id="@+id/profilePageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/account_small"
                android:drawableRight="@android:drawable/ic_media_play"
                android:text="@string/profile_page" />

            <Button
                android:id="@+id/paymentDetailsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/wallet_small"
                android:drawableRight="@android:drawable/ic_media_play"
                android:text="@string/payment_details" />

            <Button
                android:id="@+id/preferencesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/food_small"
                android:drawableRight="@android:drawable/ic_media_play"
                android:text="@string/food_preferences" />

            <Button
                android:id="@+id/PastOrdersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/order_history_small"
                android:drawableRight="@android:drawable/ic_media_play"
                android:text="@string/past_orders" />

            <Button
                android:id="@+id/favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/heart_small"
                android:drawableRight="@android:drawable/ic_media_play"
                android:text="@string/favorites" />

            <TextView
                android:id="@+id/settingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

            <Button
                android:id="@+id/notificationsButtonProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_popup_reminder"
                android:drawableRight="@android:drawable/ic_media_play"
                android:text="@string/notifications" />

            <Button
                android:id="@+id/Privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/hand_small"
                android:drawableRight="@android:drawable/ic_media_play"
                android:text="@string/privacy" />


            <TextView
                android:id="@+id/accountLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/logout"
                android:text="@string/logout" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
